<resources>
    <string name="app_name">GEMAS</string>
    <string name="base_url_ceo">http://10.10.1.19/api-gemas/index.php/</string>
    <string name="base_url_kost">http://192.168.3.103/api-gemas/index.php/</string>
    <string name="app_name_title">Gaia Tree Monitoring System</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_username">Username</string>
    <string name="text_btn_login">LOGIN</string>
    <string name="text_btn_filter">TAMPILKAN</string>
    <string name="text_btn_logout">LOGOUT</string>
    <string name="text_btn_simpan">SIMPAN</string>
    <string name="text_sync">Sinkronisasi Data</string>
    <string name="text_pohon_saya">MyTree</string>
    <string name="text_titikdua">:</string>
    <string name="text_mulai">Memantau</string>
    <string name="text_provinsi">Provinsi</string>
    <string name="text_kabkota">Kota/ Kab.</string>
    <string name="text_kecamatan">Kecamatan</string>
    <string name="text_desa">Desa</string>
    <string name="text_gapoktan">Gapoktan</string>
    <string name="pesan_eror_login">Username / Password tidak ditemukan</string>
    <string name="pesan_eror_koneksi">Periksa koneksi internet</string>
    <string name="textTt">Designer Matías Duarte explained that, "unlike real paper, our digital material can expand and reform intelligently. Material has physical surfaces and edges. Seams and shadows provide meaning about what you can touch." Google states that their new design language is based on paper and ink but implementation will take place in an advanced manner.[2][3][4]
Material Design can be used in API Level 21 (Android 5.0) and newer or via the v7 appcompat library, which is used on virtually all Android devices manufactured after 2009.[citation needed] Material Design will gradually be extended throughout Google's array of web and mobile products, providing a consistent experience across all platforms and applications. Google has also released application programming interfaces (APIs) for third-party developers to incorporate the design language into their applications.[5][6][7]The main purpose of material design is creation of new visual language that combines principles of good design with technical and scientific innovation.</string>
</resources>
