<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context="id.gaia.treemonitoring.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_pohon_white_64dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/app_name_title"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="normal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layBranch"
            android:background="@drawable/nopadding"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/nobackground"
                android:hint="@string/text_hint_username"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteof" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorWhite" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/nobackground"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteof" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/nopadding"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:background="@drawable/button_style_white"
                android:onClick="viewBeranda"
                android:text="@string/text_btn_login"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>
