<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgorund"
    tools:context="id.gaia.treemonitoring.FilterActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarfilter"
        layout="@layout/toolbar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/padding_8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_provinsi"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_titikdua"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinprovinsi"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        tools:listitem="">

                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_kabkota"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_titikdua"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinkabkota"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        tools:listitem="">

                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_kecamatan"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_titikdua"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinkecamatan"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        tools:listitem="">

                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_desa"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_titikdua"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spindesa"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        tools:listitem="">

                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_gapoktan"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/text_titikdua"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spingapoktan"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        tools:listitem="">

                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/nopadding"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/btnLogin"
                android:background="@color/colorPrimary"
                android:text="@string/text_btn_filter"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
